force-app/main/default/objects/Days_Off__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Holidays__c</fullName>
        <formula>IF( AND( TEXT( Day_Type_in_Contract__c )=&quot;Working Days&quot;,TEXT(Type__c) =&quot;Holidays&quot;, TEXT(Status_Picklist__c) =&quot;Approved&quot;), Days_Off__c,IF( AND( TEXT( Day_Type_in_Contract__c )=&quot;Calendar Days&quot;, TEXT(Type__c) =&quot;Holidays&quot;, TEXT(Status_Picklist__c) =&quot;Approved&quot;),  Calendar_Days_Off__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Holidays</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Maternity_Leave__c</fullName>
        <formula>IF( AND(TEXT(Type__c) =&quot;Maternity Leave&quot;, TEXT(Status_Picklist__c) =&quot;Approved&quot;),  Calendar_Days_Off__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Maternity Leave</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Other_Leave__c</fullName>
        <formula>IF( AND(TEXT(Type__c) =&quot;Other Leave&quot;, TEXT(Status_Picklist__c) =&quot;Approved&quot;), Days_Off__c,0)</formula>
        <label>Approved Other Leave</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Sick_Days__c</fullName>
        <formula>IF( AND(TEXT(Type__c) =&quot;Sick Leave&quot;, TEXT(Status_Picklist__c) =&quot;Approved&quot;), Days_Off__c,0)</formula>
        <label>Approved Sick Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Leave blank to use the default approver for your school (typically the Headteacher)</inlineHelpText>
        <label>Approver (Optional)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Authorised_Approver__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Days_Off</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Days_Off__c</fullName>
        <formula>(End_Date__c -  Start_Date__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Days Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_Email_Staff__c</fullName>
        <formula>Employment_Agreement__r.Staff_Member__r.Email_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Staff Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Type_in_Contract__c</fullName>
        <label>Day Type in Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Working Days</fullName>
                    <default>true</default>
                    <label>Working Days</label>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Off_Month__c</fullName>
        <formula>IF(
   MONTH(Start_Date__c) = 08, &quot;August&quot;,
   IF(
      MONTH(Start_Date__c) = 09, &quot;September&quot;,
      IF(
         MONTH(Start_Date__c) = 10, &quot;October&quot;,
         IF(
            MONTH(Start_Date__c) = 11, &quot;November&quot;,
            IF(
               MONTH(Start_Date__c) = 12, &quot;December&quot;,
               IF(
                  MONTH(Start_Date__c) = 01, &quot;January&quot;,
                  IF(
                     MONTH(Start_Date__c) = 02, &quot;February&quot;,
                     IF(
                        MONTH(Start_Date__c) = 03, &quot;March&quot;,
                        IF(
                           MONTH(Start_Date__c) = 04, &quot;April&quot;,
                           IF(
                              MONTH(Start_Date__c) = 05, &quot;May&quot;,
                              IF(
                                 MONTH(Start_Date__c) = 06, &quot;June&quot;,
                                 IF(
                                    MONTH(Start_Date__c) = 07, &quot;July&quot;,
    &quot;&quot;
  ))))))))))))</formula>
        <label>Days Off Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Off__c</fullName>
        <formula>IF( AND(TEXT( Day_Type_in_Contract__c )=&quot;Calendar Days&quot;, TEXT(Type__c)=&quot;Holidays&quot;), Calendar_Days_Off__c-(IF( Half_Day__c = TRUE,0.5,0)), IF(Start_Date__c= End_Date__c,1-Official_Holidays_in_between__c-(IF( Half_Day__c = TRUE,0.5,0)), Working_Days_Off__c - Official_Holidays_in_between__c-(IF( Half_Day__c = TRUE,0.5,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Off</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employment_Agreement__c</fullName>
        <label>Employment Agreement</label>
        <referenceTo>Employment_Agreement__c</referenceTo>
        <relationshipLabel>Days Off</relationshipLabel>
        <relationshipName>Days_Off</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Half_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Half Day?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holidays_Left_After_Approvala__c</fullName>
        <label>Holidays Left After Approval</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holidays_Taken__c</fullName>
        <formula>Employment_Agreement__r.Holidays_Taken__c</formula>
        <label>Holidays Taken</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holidays_in_Contract_Email__c</fullName>
        <formula>IF( TEXT(Employment_Agreement__r.Staff_Member__r.School_Department__c)=&quot;Academic&quot;,&quot;School Holidays&quot;, TEXT(Holidays_in_Contract__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holidays in Contract (Email)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holidays_in_Contract__c</fullName>
        <formula>Employment_Agreement__r.Holidays_Admin_Support_Staff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holidays in Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter_Days_Off__c</fullName>
        <description>Defines the email address of the initial submitter for use in sending update emails to the same.</description>
        <label>Initial Submitter (Days Off)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Line_Manager_s_Email__c</fullName>
        <label>Line Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Main_Approver__c</fullName>
        <formula>IF( Approver__c &lt;&gt; &quot;&quot;, Approver__r.FirstName &amp;&quot; &quot;&amp;Approver__r.LastName, 

&quot;the &quot; &amp;Employment_Agreement__r.Staff_Member__r.Main_Approver__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <formula>IF(TEXT( Employment_Agreement__r.Staff_Member__r.Line_Manager__r.Position__c )=&quot;Headteacher&quot;,&quot;&quot;,IF(TEXT( Employment_Agreement__r.Staff_Member__r.Line_Manager__r.Position__c )=&quot;Head of Administration&quot;, &quot;&quot;, Employment_Agreement__r.Staff_Member__r.Line_Manager_s_Email__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maternity_Partenity_in_Contract__c</fullName>
        <formula>TEXT(Employment_Agreement__r.Maternity_Paternity_Leave__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maternity /Partenity in Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Official_Holidays_in_between__c</fullName>
        <label>Official Holidays in between</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Leave_Taken__c</fullName>
        <formula>Employment_Agreement__r.Other_Leave_Taken__c</formula>
        <label>Other Leave Taken</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Employment_Agreement__r.Staff_Member__r.Owner.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sick_Days_Left_After_Approval__c</fullName>
        <description>This field is set up to show the holidays left IMMEDIATELY after the approval is received. It is updated via a workflow</description>
        <label>Sick Days Left After Approval</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_Days_in_Contract__c</fullName>
        <formula>Employment_Agreement__r.Sick_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sick Days in Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_Leave_Taken__c</fullName>
        <formula>Employment_Agreement__r.Sick_Leave_Taken__c</formula>
        <label>Sick Leave Taken</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Email__c</fullName>
        <label>Staff Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Staff_Member_Campus__c</fullName>
        <formula>TEXT(Employment_Agreement__r.Staff_Member__r.Campus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <formula>Employment_Agreement__r.Staff_Member__r.FirstName  &amp;&quot; &quot;&amp; Employment_Agreement__r.Staff_Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Picklist__c</fullName>
        <label>Status Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Status_Picklist__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <formula>TEXT( Holidays_Left_After_Approvala__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holidays</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
                <value>
                    <fullName>Maternity/Paternity Leave</fullName>
                </value>
                <value>
                    <fullName>Other Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_Days_Off__c</fullName>
        <formula>(IF(AND((5 - (CASE(MOD( Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(  End_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
((( End_Date__c  -   Start_Date__c ) + 1) &lt; 7)), 
((CASE(MOD(  End_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(  Start_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR((( End_Date__c  -  Start_Date__c ) - (CASE(MOD(  Start_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD(  Start_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD(  End_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Working Days Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Days Off</label>
    <listViews>
        <fullName>All</fullName>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Staff_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Request Num.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Days Off</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Checks_Excess_Official_holidays</fullName>
        <active>true</active>
        <description>Checks if more official holidays have been inputed than days requested</description>
        <errorConditionFormula>Official_Holidays_in_between__c &gt; Calendar_Days_Off__c</errorConditionFormula>
        <errorDisplayField>Official_Holidays_in_between__c</errorDisplayField>
        <errorMessage>You have indicated more Official Holidays in Between than days off requested.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_Negative_Days_Off</fullName>
        <active>true</active>
        <description>Checks if negative days off are requested.</description>
        <errorConditionFormula>Days_Off__c &lt; 0</errorConditionFormula>
        <errorMessage>You cannot have negative Days Off. Please review and correct the criteria entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_if_1_day_holiday_during_weekend</fullName>
        <active>true</active>
        <description>Checks if 1 day off is requested during a weekend</description>
        <errorConditionFormula>AND( Working_Days_Off__c =5,  Start_Date__c = End_Date__c )</errorConditionFormula>
        <errorMessage>You have requested 1 day off during a weekend, which the system does not allow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_later_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorMessage>The Start Date can&apos;t be later than the End Date</errorMessage>
    </validationRules>
</CustomObject>